src/index.css
@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
* {
  margin: 0;
  padding: 0;
  font-size: inherit;
  color: white;
  font-family: "Space Mono", monospace;
}
body {
  width: 100vw;
  height: 100vh;
  background-color: #141d2f;
}
.container {
  margin-inline: auto;
}
.navigation-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-block: 2rem;
}
.logo {
  font-style: normal;
  font-weight: 700;
  font-size: 1.625rem;
  line-height: 2.4375rem;
}

.darkmodeSelector {
  display: flex;
  gap: 1rem;
  align-items: center;
  font-family: "Space Mono";
  font-style: normal;
  font-weight: 700;
  font-size: 0.8125rem;
  line-height: 1.1875rem;
  letter-spacing: 0.15625rem;
}
.container {
  min-width: 20.4375rem;
  margin-inline: 4rem;
}
.container > * + * {
  margin-top: 2rem;
}

.searchContainer {
  background-color: #1e2a47;
  padding: 0.5rem;
  padding-inline: 1rem;
  border-radius: 0.75rem;
  display: flex;
  gap: 1rem;
  align-items: center;
}
.searchContainer input {
  width: 100%;
  background-color: #1e2a47;
  border: none;
}
.searchContainer input:focus {
  outline: none;
}
.searchContainer button {
  padding-inline: 1rem;
  padding-block: 0.78125rem;
  background-color: #0079ff;
  border: none;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  border-radius: 0.75rem;
  cursor: pointer;
}

.searchContainer img {
  height: 1.125rem;
  width: 1.125rem;
}

.content-card {
  background-color: #1e2a47;
  border-radius: 0.75rem;
  padding: 2rem;
}
.content-card img {
  width: 6.25rem;
  height: 6.25rem;
  border-radius: 50%;
}
.stats-card {
  display: flex;
  justify-content: space-between;
  background-color: #141d2f;
  padding: 1rem 4rem;
  font-size: 0.6875rem;
  border-radius: 0.75rem;
}
.details {
  display: flex;
  flex-direction: column;
}
.details-container {
  display: flex;
  gap: 1rem;
  font-size: 0.8125rem;
}
.content-card > * + * {
  margin-top: 2rem;
}
.links {
  font-weight: 400;
  font-size: 0.8125rem;
  line-height: 1.1875rem;
}
.links > * + * {
  margin-top: 1rem;
}

.list {
  display: flex;
  gap: 1rem;
}
.list img {
  width: 1.25rem;
  height: 1.25rem;
}

.stat span {
  font-size: 1rem;
  font-weight: bold;
}

